crates/biome_js_type_info/tests/snapshots/infer_flattened_keyof_interface.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
interface Things {
	thing: string;
	other: number;
}

type K = keyof Things;

```

## Result

```
Module(0) TypeId(2) | Module(0) TypeId(3)
```

## Registered types

```
Thin TypeId(0) => interface "Things" {
  extends: []
  type_args: []
  members: ["thing": string, "other": number]
}

Thin TypeId(1) => interface "Things" {
  extends: []
  type_args: []
  members: ["thing": string, "other": number]
}

Thin TypeId(2) => string: thing

Thin TypeId(3) => string: other
```
