crates/biome_js_type_info/tests/snapshots/infer_flattened_type_from_double_chained_invocation_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

returnsPromise()
	.then(() => {})
	.finally(() => {});

```

## Result

```
instanceof Promise
```

## Registered types

```
Module TypeId(0) => sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Global TypeId(17)
}

Module TypeId(1) => instanceof Promise<T = number>

Module TypeId(2) => sync Function "Promise.prototype.then" {
  accepts: {
    params: []
    type_args: []
  }
  returns: instanceof Promise
}

Module TypeId(3) => sync Function {
  accepts: {
    params: []
    type_args: []
  }
  returns: unknown reference
}

Module TypeId(4) => instanceof Promise

Module TypeId(5) => sync Function "Promise.prototype.finally" {
  accepts: {
    params: []
    type_args: []
  }
  returns: instanceof Promise
}

Global TypeId(17) => instanceof Promise<T = number>

Global TypeId(18) => instanceof Promise<T = number>
```
