crates/biome_js_type_info/tests/snapshots/infer_flattened_type_from_invocation_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils/mod.rs
expression: content
snapshot_kind: text
---
```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

returnsPromise();

```

```
Object {
  prototype: "Promise" {
    extends: none
    type_args: [T -> number]
  }
  members: {}
}
```
