crates/biome_js_type_info/tests/snapshots/infer_flattened_type_from_static_promise_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
Promise.resolve("value");

```

## Result

```
instanceof Promise
```

## Registered types

```
Global TypeId(17) => sync Function "Promise.resolve" {
  accepts: {
    params: []
    type_args: []
  }
  returns: instanceof Promise
}

Global TypeId(18) => value: value
```
