crates/biome_js_type_info/tests/snapshots/infer_flattened_type_of_async_function.snap
---
source: crates/biome_js_type_info/tests/utils/mod.rs
expression: content
snapshot_kind: text
---
```ts
async function returnsPromise(): Promise<string> {
	return "value";
}

```

```
async Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: "Promise" {
    extends: none
    type_args: [T -> string]
  }
}
```
