crates/biome_js_type_info/tests/snapshots/infer_flattened_type_of_destructured_interface_field.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
interface Foo {
	foo(): string;
}

function bar({ foo }: Foo) {}

```

## Result

```
sync Function "bar" {
  accepts: {
    params: [
      required (unnamed): Module(0) TypeId(1) (bindings: foo:Module(0) TypeId(2))
    ]
    type_args: []
  }
  returns: unknown reference
}
```

## Registered types

```
Thin TypeId(0) => interface "Foo" {
  extends: []
  type_args: []
  members: ["foo": Global TypeId(0)]
}

Thin TypeId(1) => instanceof Module(0) TypeId(0)

Thin TypeId(2) => sync Function "foo" {
  accepts: {
    params: []
    type_args: []
  }
  returns: string
}

Global TypeId(0) => sync Function "foo" {
  accepts: {
    params: []
    type_args: []
  }
  returns: string
}
```
